# schoolEngine

./: .clang-format  .gitignore  CMakeLists.txt  Example1.bvh  clang-format.txt
imgui/: imgui_impl_opengl3.cpp
shaders/: debug.frag  debug.vert  macshader.frag  macshader.vert  shader.frag  shader.vert  uniformColor.frag  uniformColor.vert
src/: TriangleNeighbor.cpp  TriangleNeighbor.h  VertexBuffer.cpp  VertexBuffer.h  aabb.cpp  aabb.h  boundingbox.cpp  boundingbox.h  bvhParser.cpp  bvhParser.h  camera.cpp  camera.h  collisionManager.cpp  collisionManager.h  common.h  debugdraw.cpp  debugdraw.h  ecs.cpp  ecs.h  explodingbox.cpp  interpolation.cpp  interpolation.h  keyframe.cpp  keyframe.h  main.cpp  obj.cpp  obj.h  object.h  particle.cpp  particle.h  physicsManager.cpp  physicsManager.h  renderer.cpp  renderer.h  rendererablemanager.cpp  shader.cpp  shader.h  shaterableManager.cpp  shaterableManager.h  skeleton.cpp  (+5 more)
src/ecs/: CollidableSystem.cpp  CollidableSystem.h  System.h  components.h  ecs.cpp  ecs.h  physicsManager.cpp  physicsManager.h  physicsSystem.cpp  physicsSystem.h  rendererableSystem.cpp  rendererableSystem.h  rendererablemanager.cpp  rendererablemanager.h  shaterableManager.cpp  shaterableManager.h  shaterableSystem.cpp  shaterableSystem.h
src/renderer/: ShaderLibrary.cpp  ShaderLibrary.h  VertexBuffer.h  camera.h  debugdraw.cpp  debugdraw.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shaderLibrary.cpp  shaderLibrary.h
